39.k8s-practice-ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service3
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80 # The port the service will be accessible on
      targetPort: 80 # The target port on your containers
