39.k8s-practice-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yug-svc
spec:
  selector:
    app: yug
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
