39.k8s-practice-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: jay.newyeardhamaka.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: yug-svc
                port:
                  number: 80
            path: /
