39.k8s-practice-ingress/updated-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yug-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - newyeardhamaka.in
    secretName: newyeardhamaka-tls 
  rules:
  - host: newyeardhamaka.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yug-svc
            port:
              number: 80
